--- a/Resources/stock_prediction_using_LSTM.ipynb
+++ b/Resources/stock_prediction_using_LSTM.ipynb
@@ -2970,7 +2970,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "25aa7ff2-0377-4520-b034-7314550c502c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
